--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ compile_commands.json
 build
 log/falcon.*
 stats.out
+
+cloud_native/docker_build/cn/metadb
+cloud_native/docker_build/cn/falcon_cm
+cloud_native/docker_build/dn/metadb
+cloud_native/docker_build/dn/falcon_cm
+cloud_native/docker_build/store/falconfs
