Bugfix for falcon meta server (#18)
* use try catch in abortion; start all services as process starts

* avoid throwing error if self not found in shard table

* fix the bug: cn has 3 replicas; add the check replication tool

* if metaserver is in recovery status, dont start background service

* avoid throwing error while aborting

* add gdb and pstack in falcon-store docker image

* add some logs in router.cpp

* add missing head

* modified the falcom cm

* get local server id under user-controlled transaction

* add the func to check extension is ready

* modified the location of transaction

* modified the docker build

* modifed the log loc

* start 2pc background through cm

* change the log level

* organize the condition to check the status of falcon extension loading

---------

Co-authored-by: sth4nthL <liumingyu15@huawei.com>
Co-authored-by: LEAKD98 <guo1049089770@gmail.com>

--- a/cloud_native/docker_build/store/Dockerfile
+++ b/cloud_native/docker_build/store/Dockerfile
@@ -7,9 +7,9 @@ ENV TZ=Asia/Shanghai \
     LANGUAGE=en_US:en \
     LC_ALL=en_US.UTF-8
 
-RUN apt-get install -y vim fuse
+RUN apt-get install -y vim fuse gdb pstack
 
-RUN mkdir /opt/log/ && mkdir /opt/falcon/ && mkdir /opt/conf/ && mkdir /opt/output/ && mkdir /mnt/falcon/
+RUN mkdir /opt/log && mkdir /opt/falcon/ && mkdir /opt/conf/ && mkdir /mnt/falcon/
 COPY config.json /opt/conf/
 ENV CONFIG_FILE=/opt/conf/config.json
 COPY falconfs /root/falconfs
