Modify default config.

--- a/config/config.json
+++ b/config/config.json
@@ -21,8 +21,8 @@
         "falcon_to_local": false,
         "falcon_log_reserved_num": 3,
         "falcon_log_reserved_time": 1,
-        "falcon_stat_max": false,
-        "falcon_use_prometheus": false,
+        "falcon_stat_max": true,
+        "falcon_use_prometheus": true,
         "falcon_prometheus_port": "50040"
     }
 }
