Adapt car docker image. Adapt car prometheus report. Set max open instance num in config file. Add log in client side meta error. Change to timed wait. Report current open fds. Set max open instance to 0 in config will unset the limit.

--- a/config/config.json
+++ b/config/config.json
@@ -8,6 +8,7 @@
         "falcon_block_size": 524288,
         "falcon_read_big_file_size": 2097152,
         "falcon_preblock_num": 1000,
+        "falcon_max_open_num": 0,
         "falcon_node_id": 0,
         "falcon_cluster_view": ["127.0.0.1:56039", "0.0.0.0:56039"],
         "falcon_thread_num": 50,
