--- a/config/config.json
+++ b/config/config.json
@@ -24,6 +24,7 @@
         "falcon_log_reserved_time": 1,
         "falcon_stat_max": true,
         "falcon_use_prometheus": true,
-        "falcon_prometheus_port": "50040"
+        "falcon_prometheus_port": "50040",
+        "falcon_primary_lsn_ttl_ms": 50
     }
 }
