Add client ut. Fix bug.

--- a/tests/common/CMakeLists.txt
+++ b/tests/common/CMakeLists.txt
@@ -21,3 +21,27 @@ target_link_libraries(FalconCMIT
 )
 
 gtest_discover_tests(FalconCMIT)
+
+# ==================== ExpiringCacheUT =================
+add_executable(ExpiringCacheUT
+    ${PROJECT_SOURCE_DIR}/tests/common/test_expiring_cache.cpp
+    ${common_src}
+)
+target_link_libraries(ExpiringCacheUT
+    FalconStore
+    FalconClient
+    zookeeper_mt
+    glog
+    jsoncpp
+    gtest
+    pq
+    ${BRPC_LIBRARIES}
+    ${DYNAMIC_LIB}
+)
+target_include_directories(ExpiringCacheUT PUBLIC
+    ${PROJECT_SOURCE_DIR}/falcon_store/src/include
+    ${PROJECT_SOURCE_DIR}/falcon_client/src/include
+    ${PROJECT_SOURCE_DIR}/common/src/include
+)
+
+gtest_discover_tests(ExpiringCacheUT)
