--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(falcon_store)
 add_subdirectory(private-directory-test)
 add_subdirectory(common)
 add_subdirectory(falcon_client)
+add_subdirectory(falcon_db)
