--- a/tests/falcon_client/CMakeLists.txt
+++ b/tests/falcon_client/CMakeLists.txt
@@ -27,3 +27,28 @@ target_include_directories(RouterUT PUBLIC
 )
 
 gtest_discover_tests(RouterUT)
+
+# ==================== ConnectionUT =================
+add_executable(ConnectionUT
+    ${PROJECT_SOURCE_DIR}/tests/falcon_client/test_connection.cpp
+    ${common_src}
+)
+target_link_libraries(ConnectionUT
+    FalconStore
+    FalconClient
+    zookeeper_mt
+    glog
+    jsoncpp
+    gtest
+    pq
+    ${BRPC_LIBRARIES}
+    ${DYNAMIC_LIB}
+)
+
+target_include_directories(ConnectionUT PUBLIC
+    ${PROJECT_SOURCE_DIR}/falcon_store/src/include
+    ${PROJECT_SOURCE_DIR}/falcon_client/src/include
+    ${PROJECT_SOURCE_DIR}/common/src/include
+)
+
+gtest_discover_tests(ConnectionUT)
