Fix bug: Multiple nodeIds uploaded caused by watcher thread reuploads before initialization. Reupload failure not killing the process. Delayed nullptr handling due to connection creation. Node id map fetch and update not considering same node id with different values.
New feature:
Using control file to dynamically determine whether to exit the process or not during heartbeat lost.

New test:
New test case in NodeUT.
New integration test in regress test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,11 @@ if(WITH_PROMETHEUS)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_PROMETHEUS")
 endif()
 
+option(BUILD_TEST "Enable test compile" OFF)
+if(BUILD_TEST)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST")
+endif()
+
 # ==================== Dependencies =================
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 find_package(BRPC REQUIRED)
