--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(private-directory-test)
 add_subdirectory(common)
 add_subdirectory(falcon_client)
 add_subdirectory(falcon_db)
+add_subdirectory(integration)
