Fix issue in workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,15 @@ jobs:
         apt update
         apt install -y git
 
-    - name: Check out the repository
-      uses: actions/checkout@v4
-      with:
-        submodules: true
+    - name: Checkout with custom script
+      run: |
+        git config --global --add safe.directory /__w/falconfs/falconfs
+        rm -rf third_party/concurrentqueue || true
+        git rm --cached third_party/concurrentqueue || true
+        if [ -f .gitmodules ] && [ -s .gitmodules ]; then
+          git submodule sync
+          git submodule update --init --recursive --depth=1
+        fi
 
     - name: Add non-root user
       run: |
@@ -32,6 +37,12 @@ jobs:
         useradd -u 1001 -m -s /bin/bash falcon
         echo "falcon ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
         chown -R falcon $GITHUB_WORKSPACE
+
+    - name: Check library installed
+      run: |
+        apt update
+        apt install -y libboost-all-dev
+        ls /usr/include/boost/lockfree/queue.hpp 2>/dev/null || echo "Boost header not found"
 
     - name: Install dependencies
       run: .github/workflows/install_dependencies.sh
